--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,10 +17,14 @@ nav_version = "2.8.9"
 google-service = "4.4.2"
 facebook = "latest_version"
 playServicesAuth = "21.3.0"
+kotlinx-coroutines = "1.7.3"
+material3Lint = "1.4.0-alpha12"
+materialIconsExtended = "1.6.6"
 
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -44,6 +48,8 @@ koin-androidx-compose = { module = "io.insert-koin:koin-androidx-compose", versi
 navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "nav_version" }
 facebook = { module = "com.facebook.android:facebook-login", version.ref = "facebook" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
+kotlinx-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "kotlinx-coroutines" }
+androidx-material3-lint = { group = "androidx.compose.material3", name = "material3-lint", version.ref = "material3Lint" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
