--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,7 @@ playServicesAuth = "20.7.0"
 kotlinx-coroutines = "1.7.3"
 material3Lint = "1.4.0-alpha12"
 materialIconsExtended = "1.6.6"
+coreSplashscreen = "1.0.1"
 
 
 [libraries]
@@ -50,6 +51,7 @@ facebook = { module = "com.facebook.android:facebook-login", version.ref = "face
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
 kotlinx-coroutines-play-services = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-play-services", version.ref = "kotlinx-coroutines" }
 androidx-material3-lint = { group = "androidx.compose.material3", name = "material3-lint", version.ref = "material3Lint" }
+androidx-core-splashscreen = { group = "androidx.core", name = "core-splashscreen", version.ref = "coreSplashscreen" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
